--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "agenda": "^3.0.0",
+    "date.js": "^0.3.3",
     "discord.js": "^11.5.1",
     "googleapis": "43.0.0",
-    "luxon": "^1.22.0"
+    "luxon": "^1.22.0",
+    "redis": "^3.0.2",
+    "spacetime": "^6.4.1"
   }
 }
