--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "agenda": "^3.0.0",
     "discord.js": "^11.5.1",
+    "dotenv": "^8.2.0",
     "googleapis": "43.0.0",
     "luxon": "^1.22.0",
     "redis": "^3.0.2",
