--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "discord-greeter-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index-temp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index-temp.js"
   },
   "keywords": [],
   "author": "",
