--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "agenda": "^3.0.0",
-    "discord.js": "^11.5.1",
+    "discord.js": "11.6.2",
     "dotenv": "^8.2.0",
     "googleapis": "43.0.0",
     "luxon": "^1.22.0",
