--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
@@ -16,6 +17,7 @@
     "dotenv": "^8.2.0",
     "googleapis": "43.0.0",
     "luxon": "^1.22.0",
+    "nodemon": "^2.0.2",
     "redis": "^3.0.2",
     "spacetime": "^6.4.1",
     "spacetime-week": "0.0.1"
