--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon index.js -L",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
